@@ -45,7 +45,7 @@ packages.</a></font>
 RPM or DEB package?</a></font>
 <br><font color="#330000"><a href="#3.2">3.2. Compiling from source: WHAT
 THE HECK DO I DO NOW?</a></font>
-<br><font color="#330000"><a href="#3.2">3.3. Why does everything go into
+<br><font color="#330000"><a href="#3.3">3.3. Why does everything go into
 /usr/local?</a></font>
 <br><font color="#330000"><a href="#3.4">3.4. I get errors about 'bindtextdomain',
 'gettext' and/or 'gettextdomain'.&nbsp; What can I do about it?</a></font>
@@ -94,7 +94,7 @@ nano instead of Pico?</a></font>
 <br><font color="#330000"><a href="#6.2">6.2. Why should I use Pico instead
 of nano?</a></font>
 <br><font color="#330000"><a href="#6.3">6.3. What is so bad about the
-PINE license?</a></font>
+Pine license?</a></font>
 <br><font color="#330000"><a href="#6.4">6.4. Okay, well what mail program
 should I use then?</a></font>
 <br><font color="#330000"><a href="#6.5">6.5. Why doesn't UW simply change
@@ -142,7 +142,7 @@ it is useful enough it will be included in future versions.</font></blockquote>
 <a NAME="1.3"></a><font color="#330000">1.3. What is GNU nano?</font></h2>
 
 <blockquote><font color="#330000">GNU Nano is designed to be a free
-replacement for the Pico text editor, part of the PINE email suite from <a
+replacement for the Pico text editor, part of the Pine email suite from <a
 href="http://www.washington.edu/pine">The University of
 Washington</a>.&nbsp; It aims to "emulate Pico as closely as possible and
 perhaps include extra functionality.</font></blockquote>
@@ -203,7 +203,7 @@ nano was developed).</font></blockquote>
 of nano?</font></h2>
 
 <blockquote><font color="#330000">The current version of nano *should*
-be 1.1.4.&nbsp; Of course you should always check the nano hompage to
+be 1.1.4.&nbsp; Of course you should always check the nano homepage to
 see what the latest and greatest version is.</font></blockquote>
 
 <h2>
@@ -252,10 +252,10 @@ packages.</font></h2>
 at:</font>
 <ul>
 <li>
-<font color="#330000"><a href="http://metalab.unc.edu/pub/Linux/distributions/redhat/contrib/libc6/i386">http://metalab.unc.edu/pub/Linux/distributions/redhat/contrib/libc6/i386</a></font></li>
+<font color="#330000"><a href="http://distro.ibiblio.org/pub/Linux/distributions/redhat/contrib/libc6/i386">http://metalab.unc.edu/pub/Linux/distributions/redhat/contrib/libc6/i386</a></font></li>
 
 <li>
-<font color="#330000"><a href="ftp://metalab.unc.edu/pub/Linux/distributions/redhat/contrib/libc6/i386">ftp://metalab.unc.edu/pub/Linux/distributions/redhat/contrib/libc6/i386</a></font></li>
+<font color="#330000"><a href="ftp://distro.ibiblio.org/pub/Linux/distributions/redhat/contrib/libc6/i386">ftp://metalab.unc.edu/pub/Linux/distributions/redhat/contrib/libc6/i386</a></font></li>
 </ul>
 </blockquote>
 
@@ -585,7 +585,7 @@ mailer integration with Pine), nano is the way to go.
 </blockquote>
 
 <h2>
-<a NAME="6.3"></a><font color="#330000">6.3. What is so bad about the PINE
+<a NAME="6.3"></a><font color="#330000">6.3. What is so bad about the Pine
 license?</font></h2>
 
 <blockquote><font color="#330000">The U of W license for Pine and
@@ -602,7 +602,7 @@ both, i.e. distribute modified binaries.</blockquote>
 should I use then?</font></h2>
 
 <blockquote><font color="#330000"> If you are looking to use a Free
-Software program similar to PINE and emacs is not your thing, you should
+Software program similar to Pine and emacs is not your thing, you should
 definitely take a look at <a href="http://www.mutt.org">mutt</a>.&nbsp; It
 is a full-screen, console based mail program that actually has a lot more
 flexibility than Pine, but has a keymap included in the distribution that
@@ -682,6 +682,7 @@ and you should know the answer.</font></blockquote>
 <a NAME="8"></a><font color="#330000">8. ChangeLog</font>
 </h2>
 
+<blockquote>2001/12/26 - Misc. fixes (Aaron S. Hawley, DLR).</blockquote>
 <blockquote>2001/10/02 - Update for Free Translation Project.</blockquote>
 <blockquote>2001/10/02 - Assorted fixes, Debian additions.</blockquote>
 <blockquote>2001/06/30 - Silly typo fix.</blockquote>
